# srfm

./: .gitignore  .readthedocs.yaml  AAA_README.txt  ARIA_module.py  CITATION.cff  LICENCE.md  LICENSE  MANIFEST.in  Makefile  README.md  build_extensions.py  clean_srfm.py  hatch_build.py  mie_ewp.f90  mies_ewp.f90  optical_properties.py  pyproject.toml  quadrature.py  size_distribution.py  testrun_rfmdisort.py
docs/: docstrings_allowed_sections.txt  requirements.txt
docs/source/: conf.py  overview.rst  srfm.rst
docs/source/_templates/: layout.html
examples/: plot_IASI_L1c_lnd.py  plot_IASI_L1c_locations.py
examples/Raikoke/: day.atm  driver_table.py  iasi.ils  iasi_nedt.txt  run_srfm.py
examples/TO UPDATE/: plot_IASI_L1c_locations.py  plot_IASI_L1c_spectrum.py  plot_ewp.py  plot_ewp_diff.py
examples/basic_example/: driver_table.py  run_srfm.py
examples/basic_example/results/: bbt.nc  rfm.drv
src/: driver_table.py  run_srfm.py
src/results/: hlat_20190701_A_px8.atm  hlat_20190701_A_px8_spc.txt
src/srfm/: ARIA_module.py  Makefile  __init__.py  disort_functions.py  forward_model.py  iasi_main.py  inputs.py  layer.py  main.py  mie_ewp.f90  optical_properties.py  orography.py  oxharp_iasi_main.py  oxharp_main.py  plotting.py  quadrature.py  rfm_functions.py  rfm_helper.py  size_distribution.py  units.py  utilities.py
src/srfm/DISORT/: DISOBRDF.f  DISORT.f  DISOTESTAUX.f  LAPACK.f  LINPAK.f  RDI1MACH.f  __init__.py  code.f  disodriver.f90
src/srfm/DISORT_dbl/: DISOBRDF.f  DISORT.f  DISOTESTAUX.f  LAPACK.f  __init__.py  code.f  disodriver.f90  disotest.f90  run_disort_unit_tests.sh
src/srfm/RFM/: .f2py_f2cmap  __init__.py  rfm.drv  rfm_wrapper.pyf
src/srfm/RFM/rfm_files/: grid.spc
src/srfm/RFM/source/: addqfn_sub.f90  atmcom_dat.f90  atmfil_sub.f90  atmgrd_sub.f90  atmini_sub.f90  atmlay_sub.f90  atmprf_sub.f90  binfil_sub.f90  c11int_fnc.f90  c9real_gen.f90  chidat_dat.f90  chishp_sub.f90  chkabs_sub.f90  chkflx_sub.f90  chkfov_sub.f90  chkhom_sub.f90  chknad_sub.f90  chkprf_sub.f90  chksfc_sub.f90  ciacom_dat.f90  ciadef_sub.f90  ciafil_sub.f90  ciaint_fnc.f90  ciamol_sub.f90  cipcom_dat.f90  clccom_dat.f90  coowgt_sub.f90  ctmc25_sub.f90  ctmco2_sub.f90  ctmo2_sub.f90  dimplv_sub.f90  drvbuf_dat.f90  drvfin_sub.f90  drvflg_sub.f90  drvfov_sub.f90  drvgrd_sub.f90  drvhdr_sub.f90  drvhit_sub.f90  drvkey_sub.f90  drvlev_sub.f90  (+148 more)
src/srfm/data/ARIA/Organic_Acids/humic_acid_(Laskina_2014)/: humic-acid_Laskina_2014.ri
src/srfm/readers/: __init__.py  read_iasi_l1c.py  read_iasi_l2.py
srfm/: ARIA_module.py  Makefile  __init__.py  disort_functions.py  forward_model.py  layer.py  mie_ewp.f90  optical_properties.py  orography.py  plotting.py  prepare_all.sh  prepare_mie.sh  quadrature.py  rfm_functions.py  size_distribution.py  units.py  utilities.py
srfm/DISORT/: DISORT.f  __init__.py  code.f  prepare_disort.sh
srfm/DISORT_dbl/: BDREF.f  DISOBRDF.f  DISORT.f  DISOTESTAUX.f  ERRPACK.f  LAPACK.f  LINPACK_D.f  __init__.py  prepare_disort.sh
srfm/RFM/: rfm.drv
srfm/RFM/rfm_files/: alts.lev  day.atm  grid.spc  hgt_std.atm
srfm/RFM/source/: addair_sub.f90  addair_sub.mod  addatm_sub.f90  addatm_sub.mod  addgas_sub.f90  addgas_sub.mod  addgfl_sub.f90  addgfl_sub.mod  addgra_sub.f90  addgra_sub.mod  addnte_sub.f90  addnte_sub.mod  addpth_sub.f90  addpth_sub.mod  addqal_sub.f90  addqal_sub.mod  addqfn_sub.mod  addtan_sub.f90  addtan_sub.mod  addvib_sub.f90  addvib_sub.mod  addvmr_sub.f90  addvmr_sub.mod  adjcom_dat.f90  adjcom_dat.mod  adjust_sub.f90  adjust_sub.mod  atmaux_sub.f90  atmaux_sub.mod  atmchk_sub.f90  atmchk_sub.mod  atmcom_dat.f90  atmcom_dat.mod  atmfil_sub.mod  atmgra_sub.f90  atmgra_sub.mod  atmgrd_sub.mod  atmini_sub.mod  atmlay_sub.mod  atmlev_sub.f90  (+559 more)
srfm/readers/: __init__.py  read_iasi_l1c.py  read_iasi_l2.py
tests/: compare_interpolation.py  sa_rfmdisort.py  testrun_rfmdisort.py
tests/TO UPDATE/: plot_IASI_L1c_channels.py  plot_IASI_L1c_cld.py  plot_IASI_L1c_lnd.py  plot_IASI_L1c_locations.py  plot_IASI_L1c_spectrum.py  plot_ewp.py  plot_ewp_diff.py  test_optical_properties.py
tools/: __init__.py  _bootstrap.py  build_package.py  install_from_dist.py
(+13 files in other folders)
