[build-system]
requires = [
  "hatchling >= 1.26",
  "meson >= 1.3",
  "ninja >= 1.11",
  "numpy >= 1.25",
]
build-backend = "hatchling.build"

[project]
name = "SRFM"
version = "0.0.2"
authors = [
  { name="Antonin Knizek", email="antonin.knizek@physics.ox.ac.uk" },
]
description = "The Scattering Reference Forward Model"
readme = "README.md"
requires-python = ">=3.10, <3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "netCDF4",
    "matplotlib",
    "cartopy",
    "numba",
    "psutil",
    "mergedeep",
]

[project.urls]
Homepage = "https://github.com/eodg-code/srfm"

[tool.hatch.build]
exclude = [
    ".venv*",
    "env",
    ".conda",
    "build",
    ".pip-install-tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/srfm"]
include = ["src/srfm/data/*"]
