[build-system]
requires = [
  "hatchling >= 1.26",
  "meson >= 1.3",
  "ninja >= 1.11",
  "numpy >= 1.25",
]
build-backend = "hatchling.build"

[project]
name = "SRFM"
version = "1.0.0"
authors = [
  { name="Antonin Knizek", email="antonin.knizek@physics.ox.ac.uk" },
  { name="Roy Grainger", email="don.grainger@physics.ox.ac.uk"}
]
description = "The Scattering Reference Forward Model"
readme = "README.md"
requires-python = ">=3.10, <3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "netCDF4",
    "matplotlib",
    "cartopy",
    "numba",
    "psutil",
    "mergedeep",
]

[project.urls]
Homepage = "https://github.com/eodg-code/srfm"

[tool.hatch.build]
exclude = [
    ".venv*",
    "env",
    ".conda",
    "build",
    ".pip-install-tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/srfm"]
include = ["src/srfm/data/*"]
pure = false
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "build_extensions.py",
    "Makefile",
    "clean_srfm.py",
    "hatch_build.py",
    "src/srfm/*.py",
    "src/srfm/**/*.py",
    "src/srfm/data/*",
    "src/srfm/.f2py_f2cmap",
    "src/srfm/RFM/.f2py_f2cmap",
    "src/srfm/Makefile",
    "src/srfm/mie_ewp.f90",
    "src/srfm/DISORT/*.f",
    "src/srfm/DISORT_dbl/*.f",
    "src/srfm/RFM/rfm_wrapper.pyf",
    "src/srfm/RFM/source/*.f90",
    "src/srfm/RFM/rfm_files/*",
    "tools/*.py",
]
exclude = [
    "src/srfm/**/*.so",
    "src/srfm/**/*.pyd",
    "src/srfm/**/*.dll",
    "src/srfm/**/*.dylib",
    "src/srfm/**/*.mod",
    "src/srfm/**/*.smod",
    "src/srfm/**/__pycache__",
    "src/srfm/build.log",
]
